# rag_poc

./: .gitignore  README.md  app.py  config.py  faiss_index.index  faiss_index.pkl  learn.ipynb  mitre_chunker.py  mitre_chunks.json  pyproject.toml  requirements.txt  streamlit_app.py  test.py
docs/: 01_Information_Security_Policy.md  02_Incident_Response_Plan.md  03_Access_Control_Policy.md  04_Data_Classification_Handling_Policy.md  05_Business_Continuity_Disaster_Recovery_Plan.md  06_Acceptable_Use_Policy.md  07_Third_Party_Risk_Management_Policy.md  08_Vulnerability_Management_Procedure.md  09_Cloud_Security_Standard.md  10_Security_Awareness_Training_Policy.md
ingestion/: chunker.py  loader.py
mitre_faiss_index/: chunks.pkl  index.faiss
models/: embeddings.py  llm.py
rag/: engine.py  pipeline_builder.py  router.py
retrieval/: bm25_retreiver.py  hybrid_retreiver.py  retreiver.py
vectordb/: faiss_store.py
vectorstore_2026-04-26/: chunks.pkl  index.faiss
vectorstore_2026-04-27/: chunks.pkl  index.faiss
